--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -56,7 +56,7 @@
         width: 100%;
         order: 2;
         img {
-            max-width: 400px;
+            max-width: 300px;
             box-shadow: 3px 3px 6px #888;
             object-fit: cover;
         }
@@ -106,4 +106,34 @@ h1:before, .anchor:before {
     color: white;
     background-color: #00369f;
     font-size: .8em;
+}
+.container {
+    display: flex;
+    align-items: center; /* 垂直居中 */
+    width: 90%; /* 根据需要调整宽度 */
+    margin: 0 auto; /* 居中容器 */
+    margin-bottom: 15px; /* 控制上下间距 */
+}
+
+.degree {
+    flex: 1; /* 占据一列 */
+    padding-right: 20px; /* 控制间距 */
+    display: flex; /* 使用flex布局 */
+    align-items: center; /* 垂直居中 */
+}
+
+.details {
+    flex: 3; /* 占据三列 */
+    padding-right: 20px; /* 控制间距 */
+}
+
+.image {
+    flex: 0 0 10%; /* 固定宽度 */
+}
+
+.image img {
+    width: 100%; /* 使图片占满容器 */
+    display: block; /* 去除底部空白 */
+    margin-left: auto; /* 左右居中 */
+    margin-right: auto;
 }
