--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,15 +28,26 @@ layout: compress
     </div>
 
     {% include scripts.html %}
-
-<div class="footer_site">
+  
+    
+    <table style="width:80%;max-width:400px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
+      <tbody><tr>
+        <td style="width:100%; vertical-align:middle; text-align:center;border-bottom: none;"><p>
+          <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=n&d=mg51DHvqVAgMZXZFKrxZqOWGadvikW-S6-uyUa5Mwu4&cmn=ff5353&co=1a7cc1&cmo=2dba2d&ct=1a7cc1'></script>
+        </a></p></td>
+      </tr></tbody>
+    </table>
+<div class="footer_site" style="padding-top: 0;">
 <hr/>
 <div class="footer_copyright">
-  © 2022 华中大 · 唐健 | 基于&nbsp
-  <a class="page_a"  href="https://github.com/RayeRen/acad-homepage.github.io">
-  acad
-  </a>&nbsp模板
+  © <span id="current-year"></span>&ensp; {{ author.employer }} · {{ author.name }} |&ensp; <a href="https://hits.seeyoufarm.com"><img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fchenjh356.github.io&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=visitors&edge_flat=false"/></a>
 </div>
 </div>
+<script>
+  // 获取当前年份
+  const currentYear = new Date().getFullYear();
+  // 将年份插入到页面中
+  document.getElementById('current-year').textContent = currentYear;
+</script>
   </body>
 </html>
