--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -1,12 +1,12 @@
 <div id="Education" class="bio" style="margin-bottom:-15px">
     <div class="container">
         <div class="degree">
-            <strong>2022.11 - Present</strong>
+            <strong>2022.11 - 至今</strong>
         </div>
         <div class="details">
-            <span class="date">Research Assistant</span><br>
-            <strong><a href="https://en.genomics.cn/en-organization-3245.html">Institute of Precision Health</a>, BGI Research</strong>, Shenzhen, China.<br>
-            Deploy the metagenomic analysis process on the cloud platform and develop AI models to predict health status using microbiota.
+            <span class="date">高级研究助理</span><br>
+            <strong><a href="https://www.genomics.cn/organization-4.html">精准健康所</a>, 华大生命科学研究院</strong>, 中国, 深圳.<br>
+            在时空云平台上部署宏基因组分析流程，并开发人工智能模型使用微生物菌群来预测健康状况。
         </div>
         <div class="image">
             <img src="images/bgi.png" alt="SYSU" />
@@ -18,9 +18,9 @@
             <strong>2022.07 - 2022.10</strong>
         </div>
         <div class="details">
-            <span class="date">Clinical Intern</span><br>
-            <strong>The Seventh Affiliated Hospital, Sun Yat-sen University</strong>, Shenzhen, China.<br>
-            Basic clinical skills training
+            <span class="date">临床实习生</span><br>
+            <strong>中山大学附属第七医院</strong>, 中国, 深圳.<br>
+            基础临床技能培训，参与临床诊疗，了解医院管理和医疗服务流程。
         </div>
         <div class="image">
             <img src="images/7.png" alt="SYSU" />
@@ -32,9 +32,9 @@
             <strong>2019.08 - 2021.08</strong>
         </div>
         <div class="details">
-            <span class="date">Research Assistant</span><br>
-            <strong><a href="https://www.researchgate.net/lab/Acacia-Lab-for-Implementation-Science-Dong-Roman-Xu">Acacia Lab</a></strong>, Guangzhou, China.<br>
-            <a href="pdf/ACACIA%E5%B7%A5%E4%BD%9C%E8%AF%81%E6%98%8E%20-%20%E9%99%88%E4%BF%8A%E5%AE%8F.pdf">PPPC validation and SP visit route planning</a>
+            <span class="date">研究助理</span><br>
+            <strong><a href="https://www.researchgate.net/lab/Acacia-Lab-for-Implementation-Science-Dong-Roman-Xu">Acacia Lab</a></strong>, 中国, 广州.<br>
+            <a href="/pdf/ACACIA%E5%B7%A5%E4%BD%9C%E8%AF%81%E6%98%8E%20-%20%E9%99%88%E4%BF%8A%E5%AE%8F.pdf">PPPC问卷验证和匿名标准化病人访问线路规划</a>
         </div>
         <div class="image">
             <img src="images/acacia.png" alt="SYSU" />
